[package]
name = "object-storage"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Joey Wang <joeywdz@gmail.com>"]
description = "This library is used to manipulate oss or cos"
repository = "https://github.com/joeywang321/object-storage"
documentation = "https://docs.rs/object-storage"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
base64 = "0.21.0"
chrono = "0.4.23"
hmac = "0.12.1"
md5 = "0.7.0"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
serde-xml-rs = "0.6.0"
sha1 = "0.10.5"
tokio = { version = "1.25.0", features = ["full"] }
